# cogtool

./: .classpath  .gitignore  README.txt  build.xml  command-line-syntax.txt  copyright.txt
PMI-G-server/: pmi-g-query
XUL-mac/: Info.plist  dependentlibs.list  libfreebl3.chk  libfreebl3.dylib  libjavaxpcomglue.jnilib  libmozjs.dylib  libnspr4.dylib  libnss3.dylib  libnssckbi.dylib  libnssdbm3.dylib  libnssutil3.dylib  libplc4.dylib  libplds4.dylib  libsmime3.dylib  libsoftokn3.chk  libsoftokn3.dylib  libssl3.dylib  libwidget.rsrc  libxpcom.dylib  platform.ini  xulrunner  xulrunner-bin
XUL-win/: ._LICENSE  ._README.txt  ._chrome  ._components  ._crashreporter.ini  ._defaults  ._dependentlibs.list  ._dictionaries  ._freebl3.chk  ._greprefs  ._modules  ._platform.ini  ._plugins  ._res  ._softokn3.chk  freebl3.chk  platform.ini  softokn3.chk
clisp-mac-intel/: actr6.mem
clisp-sources/: ANNOUNCE  COPYRIGHT  INSTALL  (+5 more)
clisp-sources/ffcall/callback/trampoline_r/: COPYING  Makefile.in  cache-sparc.S  configure  configure.in  test1.c  test2.c  trampoline.c  trampoline_r.h.in
clisp-sources/modules/berkeley-db/: Makefile.in  bdb.c  berkeley-db.xml  config.h.in  configure  configure.in  dbi.lisp  ent-bdb.xml  link.sh.in  preload.lisp  test.tst
clisp-sources/modules/clx/new-clx/: INSTALL  Makefile.in  README  README.SuSE  clx-ini.lisp  clx-preload.lisp  clx.f  clx.lisp  config.h.in  configure  configure.in  image.lisp  link.sh.in  resource.lisp  test.tst
clisp-sources/modules/clx/new-clx/demos/: clx-demos.lisp  koch.lisp  qix.lisp  sokoban.lisp
clisp-sources/modules/clx/new-clx/demos/xpms/: centerwall.xpm  east_twall.xpm  eastwall.xpm  floor.xpm  goal.xpm  horizwall.xpm  llcorner.xpm  lonewall.xpm  lrcorner.xpm  man.xpm  man_down.xpm  man_left.xpm  man_right.xpm  man_up.xpm  north_twall.xpm  northwall.xpm  object.xpm  save_man_down.xpm  save_man_left.xpm  save_man_right.xpm  save_man_up.xpm  saveman.xpm  south_twall.xpm  southwall.xpm  treasure.xpm  ulcorner.xpm  urcorner.xpm  vertiwall.xpm  wall.xpm  west_twall.xpm  westwall.xpm
clisp-sources/modules/dirkey/: Makefile.in  config.h.in  configure  configure.in  dirkey.c  dirkey.xml  dirkey1.lisp  link.sh  preload.lisp
clisp-sources/modules/fastcgi/: Makefile.in  README  config.h.in  configure  configure.in  fastcgi.h  fastcgi.lisp  fastcgi.xml  fastcgi_wrappers.c  link.sh
clisp-sources/modules/i18n/: Makefile.in  config.h.in  configure  configure.in  gettext.c  i18n.lisp  i18n.xml  link.sh.in  preload.lisp  test.tst
clisp-sources/modules/oracle/: Makefile.in  README  config.h.in  configure  configure.in  examples.lisp  link.sh  oiface.c  oiface.h  oracle.lisp  oracle.xml  orafns.c
clisp-sources/modules/pari/: Makefile.in  README  config.h.in  configure  configure.in  cpari.c  cpari.h  link.sh.in  pari.lisp  pari.xml  preload.lisp
clisp-sources/modules/pcre/: Makefile.in  config.h.in  configure  configure.in  cpcre.c  link.sh.in  pcre.lisp  pcre.xml  preload.lisp  test.tst
clisp-sources/modules/postgresql/: Makefile.in  README  config.h.in  configure  configure.in  link.sh.in  postgresql.lisp  postgresql.xml  sql.lisp  test.tst
clisp-sources/modules/rawsock/: Makefile.in  config.h.in  configure  configure.in  link.sh.in  preload.lisp  rawsock.c  rawsock.xml  sock.lisp  test.tst
clisp-sources/modules/readline/: Makefile.in  config.h.in  configure  configure.in  link.sh.in  readline.lisp  readline.xml  test.tst
clisp-sources/modules/regexp/: Makefile.in  README  config.h.in  configure  configure.in  link.sh.in  preload.lisp  regexi.c  regexp.dvi  regexp.lisp  regexp.texinfo  regexp.xml  test.tst
clisp-sources/modules/syscalls/: Makefile.in  calls.c  config.h.in  configure  configure.in  link.sh.in  posix.lisp  preload.lisp  syscalls.xml  test.tst
clisp-sources/modules/wildcard/: Makefile.in  README  config.h.in  configure  configure.in  fnmatch.c  fnmatch_loop.c  link.sh.in  wildcard.dvi  wildcard.lisp  wildcard.xml
clisp-sources/modules/zlib/: Makefile.in  config.h.in  configure  configure.in  link.sh.in  test.tst  zlib.lisp  zlib.xml
clisp-sources/src/: .gdbinit  ChangeLog  CodingStyle  HISTORY  NEWS  TODO  _README  _README.de  _README.en  _README.es  _clisp.c  _distmakefile  affi.d  affi1.lisp  amigasock.lisp  ari68000.d  ari68020.d  ari80386.d  ari80386.msvc.c  ariarm.d  aridecl.d  arihppa.d  arilev0.d  arilev1.d  arilev1c.d  arilev1e.d  arilev1i.d  arimips.d  arimips64.d  arisparc.d  arisparc64.d  arivaxunix.d  array.d  asmi386.hh  avl.d  backquote.lisp  built.d  bytecode.d  case-sensitive.lisp  cfgsunux.lisp  (+296 more)
clisp-sources/src/autoconf/: aclocal.m4  autoconf.m4
clisp-sources/src/build-aux/: config.dynamic  config.rpath  install-sh
clisp-sources/src/m4/: abort.m4  access.m4  address.m4  builtin_strlen.m4  c++-constructors.m4  c++.m4  caddr_t.m4  cc-cppaux.m4  cc-ema.m4  closedir.m4  connect.m4  dir.m4  dynload.m4  eloop.m4  fenv_default.m4  ffcall-codeexec.m4  ffcall-smallstruct.m4  filecharset.m4  floatparam.m4  fnmatch.m4  fpu_control.m4  general.m4  getcwd.m4  gethostbyname.m4  gethostname.m4  gettimeofday.m4  gmalloc.m4  intparam.m4  ioctl.m4  ldap.m4  libtool.m4  make.m4  msync.m4  munmap.m4  netdb.m4  offsetof.m4  param.m4  poll.m4  putenv.m4  raise.m4  (+26 more)
clisp-sources/src/malloc/: getpagesize.h  gmalloc.c
clisp-sources/src/po/: Makefile.devel  Makefile.in.in  Makefile.trans.da  Makefile.trans.de  Makefile.trans.es  Makefile.trans.fr  Makefile.trans.nl  Makefile.trans.ru  clisp-xgettext  clisp.pot  clisplow.pot  clisplow_da.gmo  clisplow_da.po  clisplow_de.gmo  clisplow_de.po  clisplow_en.gmo  clisplow_en.po  clisplow_es.gmo  clisplow_es.po  clisplow_fr.gmo  clisplow_fr.po  clisplow_nl.gmo  clisplow_nl.po  clisplow_ru.gmo  clisplow_ru.po  da.gmo  da.po  de.gmo  de.po  en.gmo  en.po  es.gmo  es.po  fr.gmo  fr.po  nl.gmo  nl.po  po_header  po_header.txt  ru.gmo  (+1 more)
clisp-sources/utils/hln/: ChangeLog  Makefile.in  acconfig.h  backupfile.c  basename.c  config.h.in  configure  configure.in  ln.1  ln.c  realpath.c  resolve.c  safe-lstat.c  safe-lstat.h  safe-stat.c  safe-stat.h  system.h  version.c
(+1309 files in other folders)
